# WaaS

./: .gitignore  .gitmodules  404.html  README.md  api.html  blog.html  component-model.html  core.html  getting-started.html  index.html  sitemap.xml
.github/workflows/: publish-crates.yml  publish-nuget.yml  update-docs.yml
WaaS/: .gitignore  Directory.Build.props  WaaS.sln  config.yaml  docfx.json
WaaS.Unity/: .gitignore  Cargo.toml
WaaS.Unity/Assets/: RunSequenceTest.cs  test.rs
WaaS.Unity/ProjectSettings/: ProjectSettings.asset
WaaS.Unity/wit/: world.wit
WaaS/.config/: dotnet-tools.json
WaaS/Cdp.Generator/: Program.cs  (+1 more)
WaaS/wit2waas/: Cargo.toml  README.md
WaaS/wit2waas/src/: main.rs  source.rs  utils.rs
api/: STask.html  WaaS.ComponentModel.Binding.html  WaaS.ComponentModel.Models.html  WaaS.ComponentModel.Runtime.html  WaaS.ComponentModel.html  WaaS.Models.html  WaaS.Runtime.Bindings.html  WaaS.Runtime.html  WaaS.html
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
category/: getting-started.html
component-model/: binding-generator.html  component-loading.html  wit2waas.html
core/: bindings.html  calling-function.html  custom-stack-frames.html  instantiation.html  module-loading.html  spec.html
docs/: .gitignore  docusaurus.config.ts  package.json
getting-started/: component-model.html  installation.html  unity-rust.html
ja/: 404.html  api.html  blog.html  component-model.html  core.html  getting-started.html  index.html  sitemap.xml
(+2452 files in other folders)
